2004-01-19 Bernhard Held <bernhard@bernhardheld.de>

	* support/valdiag/tests/overflow.c: added shift tests
	* src/pic/device.c,
	* src/pic/gen.c,
	* src/pic/gen.h,
	* src/pic/glue.c,
	* src/pic/main.c,
	* src/pic/pcode.c,
	* src/pic/pcode.h,
	* src/pic/pcodepeep.c,
	* src/pic/pcoderegs.c,
	* src/pic/ralloc.c,
	* src/pic/ralloc.h: applied patch from Slade Rich;
	added support for multiple code pages and multiple RAM banks on the
	PIC 14 port. The ASM files now no longer simply assume all the
	code / RAM are in the same page / bank. This means the linker can
	safely allocate code/RAM of separate ASM files to different pages/banks.
	* doc/sdccman.lyx: added Slade's tips
	* src/mcs51/peeph.def: fixed bug #880768

2004-01-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (rematStr): fixed bug #879282
	* src/SDCCast.c (decorateType): fixed bug #880197

2004-01-20  Michael Hope  <michaelh@juju.net.nz>

	* sim/ucsim/gui.src/serio.src/main.cc: Fixed unconditional use of
	getopt.h.

	* debugger/mcs51/cmd.c (getValBasic): Changed strtof to strtod as
	strtof is not part of C89 and isn't included with Mac OS X.

2004-01-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPlusIncr, genUminus, genMinusDec, genCmp,
	shiftL2Left2Result): fixed bug #879326
	(genAnd, genOr, genXor): fixed bug when result was of type AOP_CRY
	(genMultOneByte): fixed bug in signed vs unsigned multiplication
	* sim/ucsim/hc08.src/inst.cc (inst_clr): added missing effective
	address fetch for clr instruction
	* device/lib/hc08/_mulint.c: created optimized assembly version
	* src/SDCCdflow.c (computeDataFlow): fixed bug #878209

2004-01-19 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCicode.c (geniCodeArray): applied patch from Stas Sergeev
	proposed in FR #877103

2004-01-18 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): added missing checks
	* src/SDCCicode.c (usualBinaryConversions): fixed condition